[package]
name = "hackathon-vegas"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
base64 = "0.22.1"
bitcoin = "0.32.5"
minreq = "2.13.4"
rand = "0.9.1"
secp256k1 = "0.31.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlite = "0.37.0"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
